--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <body>
     just a test.
     if you see this, it means the site is ok!
+    <br/>
+    忠义无贵贱，大义在我心。<br/>
+    市井之区，邦之经脉，细细把之，可得国命。<br/>
+
+    <hr/>
+    有人类文明，便有了贫穷，贫穷不会消除。
+
   </body>
 
 </html>
