--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
     <hr/>
     有人类文明，便有了贫穷，贫穷不会消除。
+    财富意味着资源，地球的资源是一定的，创造富裕，就意味着创造贫穷，贫富差距愈来愈大。
+    如何摆脱贫穷。财富的重新分配。
+    贫穷意味着一直贫穷，富裕意味着一直富裕？财富的庇佑
 
   </body>
 
